# xklean_staff

./: Cargo.toml  LICENSE  README.md  build.rs  config.yaml
server/: serverstaff.rs  xklean_staff.proto  xkleanstaff.rs
src/: main.rs  migrator_init.rs
src/adapters/: mod.rs
src/adapters/connection/: database_connection.rs
src/adapters/data/: data_address.rs  data_contact.rs  data_contact_type.rs  data_staff.rs  data_staff_type.rs  mod.rs
src/adapters/entites/: data_address.rs  data_contact.rs  data_staff.rs  mod.rs
src/adapters/entities/: data_address.rs  data_contact.rs  data_contact_type.rs  data_staff.rs  data_staff_type.rs  mod.rs
src/adapters/errors/: error_constants.rs  error_message.rs  mod.rs
src/adapters/manager/: mod.rs
src/adapters/repository/: mod.rs  repo.rs  repo_staff_mutation.rs  repo_staff_selection.rs
src/adapters/service/: mod.rs  service_staff.rs
src/adapters/transfer/: mod.rs  transfer_address.rs  transfer_contact.rs  transfer_contact_type.rs  transfer_staff.rs  transfer_staff_type.rs  treansfer_address.rs
src/adapters/types/: common_types.rs  mod.rs
src/application/: data_staff_composer.rs  handler.rs  mod.rs
src/config/: configuration.rs  mod.rs
src/config/test/: mod.rs  tst_config_test.rs
src/helpers/: hp_options.rs  mod.rs
src/infra/connection/: mod.rs
src/infra/repository/: mod.rs  repo_data_compose.rs  repo_staff_selections.rs
src/infra/services/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/connection/: database_connection.rs  mod.rs
src/infrastructure/repository/: mod.rs  repo.rs  repo_data_compose.rs  repo_staff_mutation.rs  (+1 more)
src/migrate/: mod.rs
src/proto/: xklean_staff.proto
(+16 files in other folders)
