[package]
name = "xklean_staff"
version = "0.1.0"
edition = "2021"
authors = ["Bimal Kaluarachchi"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mediator ="0.2.2"
tonic = "0.10.2"
prost = "0.12.1"
tokio = {version = "1.34.0", features = ["full"]}
tokio-stream = { version = "0.1.14",features = ["full"] }
futures = "0.3.29"
clap = "4.4.8"
tonic-reflection = "0.10.2"
prost-types = "0.12.1"
serde = {version = "1.0.193",features = ["derive"]}
serde_json = "1.0.108"
erased-serde = "0.4.1"
sea-orm = {version = "0.12.14",features = ["sqlx-postgres","runtime-tokio-native-tls","macros"]}
chrono = "0.4.31"
grade = "0.3.0"
config="0.14.0"
uuid = { version = "1.5.0", features = ["v4"] }
sqlx ={version = "0.7.3",features = ["postgres","runtime-tokio-rustls","json"]}
async-trait ="0.1"
validator = {version = "0.16.1",features = ["derive"]}
num-traits = "0.2.18"
anyhow = "1.0.79"
log = "0.4.20"
crossbeam = "0.8.4"

[build-dependencies]
tonic-build = "0.10.2"


[package.metadata.profile.dev]
tonic = {path= "server" }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
    # "sqlx-postgres",         # `DATABASE_DRIVER` feature
]

[[bin]]
name = "migration"
path = "src/migrator_init.rs"

